WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
247589
Crash when displaying autofill buttons
https://bugs.webkit.org/show_bug.cgi?id=247589
Summary
Crash when displaying autofill buttons
Aditya Keerthi
Reported
2022-11-07 15:11:08 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2022-11-07 15:11:25 PST
rdar://101938935
Aditya Keerthi
Comment 2
2022-11-07 15:21:11 PST
Pull request:
https://github.com/WebKit/WebKit/pull/6224
EWS
Comment 3
2022-11-07 17:03:24 PST
Committed
256431@main
(82deae87c0ac): <
https://commits.webkit.org/256431@main
> Reviewed commits have been landed. Closing PR #6224 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug