Cherry-pick 82deae87c0ac. rdar://problem/101938935

Crash when displaying autofill buttons
    https://bugs.webkit.org/show_bug.cgi?id=247589
    rdar://101938935

    Reviewed by Wenson Hsieh.

    Speculative revert of 255229@main, as crashes have been observed when using
    autofill buttons, following that change.

    An alternate approach will need to be taken to fix webkit.org/b/245976.

    * LayoutTests/fast/forms/auto-fill-button/show-auto-fill-button-while-selection-inside-field-expected.txt: Removed.
    * LayoutTests/fast/forms/auto-fill-button/show-auto-fill-button-while-selection-inside-field.html: Removed.
    * Source/WebCore/html/HTMLTextFormControlElement.h:
    * Source/WebCore/html/TextFieldInputType.cpp:
    (WebCore::TextFieldInputType::createDataListDropdownIndicator):
    (WebCore::TextFieldInputType::createContainer):
    * Source/WebCore/html/TextFieldInputType.h:

    Canonical link: https://commits.webkit.org/256431@main

Canonical link: https://commits.webkit.org/252432.791@safari-7614-branch